# Rust-Gpt-Discord

./: .gitignore  Cargo.toml  config.example.json  readme.md
.github/workflows/: publish.yml
hertz/: Cargo.toml
hertz/src/: lib.rs
src/: main.rs
src/command/: gpt.rs  mod.rs
src/event/: interaction.rs  mod.rs  ready.rs
src/reusable/: config.rs  error_embed.rs  mod.rs
src/reusable/gpt/: chat.rs  image.rs  mod.rs
src/reusable/serenity_new/: component.rs  mod.rs
